# ai-content-api

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  app.py  config.py  docker-compose.yml  export.py  middleware.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docker.yml
api/: __init__.py  generate.py  health.py  keys.py  providers.py  templates.py
database/: __init__.py  connection.py  repositories.py
providers/: base.py  gemini_provider.py  ollama_provider.py  openai_provider.py
templates/: __init__.py  models.py  registry.py
tests/: conftest.py  test_api.py  test_database.py  test_export.py  test_middleware.py  test_providers.py  test_templates.py
web/: index.html
